added till enroll now buttons

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <main class="container">
       <header id="hero">
         <div class="main-section">
-          <div class="notify">New Batch Start</div>
-          <div class="main-heading">GATE CS 2023</div>
-          <div class="main-heading">Complete Course</div>
+          <div class="notify"><span>New Batch Start</span></div>
+          <div class="main-heading"><h1>GATE CS 2023</h1></div>
+          <div class="main-heading"><h1>Complete Course</h1></div>
           <p class="course-description">
             Lorem Ipsum is simply dummy text printing and typesetting industry.
             It is a long established fact that.
@@ -41,8 +41,15 @@
           <div class="price">
             JUST &#8377;25000 <span class="discount">15% OFF</span>
           </div>
-          <button id="enroll" class="dark-btn">Enroll Now</button>
-          <button id="live-classes" class="light-btn">Live Classes</button>
+          <div class="buttons">
+            <button id="enroll" class="dark-btn">
+              Enroll Now <i class="material-icons">keyboard_arrow_right</i>
+            </button>
+            <button id="live-classes" class="light-btn">
+              Live Classes
+              <i class="material-icons">arrow_right</i>
+            </button>
+          </div>
         </div>
         <div class="testimonials-section">
           <div class="testimonial">
