added explore free courses

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </button>
             <button id="live-classes" class="light-btn">
               Live Classes
-              <i class="material-icons">arrow_right</i>
+              <i class="material-icons">play_arrow</i>
             </button>
           </div>
         </div>
@@ -94,43 +94,45 @@
           </div>
         </div>
       </header>
-      <div id="container-for-free-course-imp-info">
+      <div id="container-for-free-course-and-imp-info">
         <section id="free-courses">
           <h3>Explore The Free Courses</h3>
-          <ul>
-            <li>
-              <i></i>
-              <h4>C Programming and Data</h4>
-            </li>
-            <li>
-              <i></i>
-              <h4>Operating System</h4>
-            </li>
-            <li>
-              <i></i>
-              <h4>Database and Management</h4>
-            </li>
-            <li>
-              <i></i>
-              <h4>C Programming and Data</h4>
-            </li>
-            <li>
-              <i></i>
-              <h4>C Programming and Data</h4>
-            </li>
-            <li>
-              <i></i>
-              <h4>C Programming and Data</h4>
-            </li>
-            <li>
-              <i></i>
-              <h4>C Programming and Data</h4>
-            </li>
-            <li>
-              <i></i>
-              <h4>C Programming and Data</h4>
-            </li>
-          </ul>
+          <div class="courses">
+            <ul>
+              <li>
+                <img src="./assets/PNG X1/Rectangle 24.png" alt="" />
+                <h4>C Programming and Data Structures</h4>
+              </li>
+              <li>
+                <img src="./assets/PNG X1/Rectangle 24.png" alt="" />
+                <h4>Operating System</h4>
+              </li>
+              <li>
+                <img src="./assets/PNG X1/Rectangle 24.png" alt="" />
+                <h4>Database and Management</h4>
+              </li>
+              <li>
+                <img src="./assets/PNG X1/Rectangle 24.png" alt="" />
+                <h4>C Programming and Data</h4>
+              </li>
+              <li>
+                <img src="./assets/PNG X1/Rectangle 24.png" alt="" />
+                <h4>C Programming and Data</h4>
+              </li>
+              <li>
+                <img src="./assets/PNG X1/Rectangle 24.png" alt="" />
+                <h4>C Programming and Data</h4>
+              </li>
+              <li>
+                <img src="./assets/PNG X1/Rectangle 24.png" alt="" />
+                <h4>C Programming and Data</h4>
+              </li>
+              <li>
+                <img src="./assets/PNG X1/Rectangle 24.png" alt="" />
+                <h4>C Programming and Data</h4>
+              </li>
+            </ul>
+          </div>
         </section>
         <section id="important-info">
           <h3>Importrant Information</h3>
