added the Important information section

--- a/index.html
+++ b/index.html
@@ -135,18 +135,36 @@
           </div>
         </section>
         <section id="important-info">
-          <h3>Importrant Information</h3>
-          <ul>
-            <li>Lorem Ipsum is simply dummy text printing and typesetting.</li>
-            <li>Lorem Ipsum is simply dummy text printing and typesetting.</li>
+          <h3>Important Information</h3>
+          <ul class="information">
+            <li>
+              <img src="./assets/PNG X1/Ellipse 649.png" alt="" /> Lorem Ipsum
+              is simply dummy text printing and typesetting.
+            </li>
+            <li>
+              <img src="./assets/PNG X1/Ellipse 649.png" alt="" />
+              Lorem Ipsum is simply dummy text printing and typesetting.
+            </li>
 
-            <li>Lorem Ipsum is simply dummy text printing and typesetting.</li>
+            <li>
+              <img src="./assets/PNG X1/Ellipse 649.png" alt="" />
+              Lorem Ipsum is simply dummy text printing and typesetting.
+            </li>
 
-            <li>Lorem Ipsum is simply dummy text printing and typesetting.</li>
+            <li>
+              <img src="./assets/PNG X1/Ellipse 649.png" alt="" />
+              Lorem Ipsum is simply dummy text printing and typesetting.
+            </li>
 
-            <li>Lorem Ipsum is simply dummy text printing and typesetting.</li>
+            <li>
+              <img src="./assets/PNG X1/Ellipse 649.png" alt="" />
+              Lorem Ipsum is simply dummy text printing and typesetting.
+            </li>
 
-            <li>Lorem Ipsum is simply dummy text printing and typesetting.</li>
+            <li>
+              <img src="./assets/PNG X1/Ellipse 649.png" alt="" />
+              Lorem Ipsum is simply dummy text printing and typesetting.
+            </li>
           </ul>
         </section>
       </div>
