added Enroll for test series

--- a/index.html
+++ b/index.html
@@ -169,13 +169,17 @@
         </section>
       </div>
       <section id="enroll-test-series">
-        <h3>Get Enroll for Test Series</h3>
+        <div class="main-heading">
+          <h2>Get Enrolled</h2>
+          <h2>for Test Series</h2>
+        </div>
         <p>
           Lorem Ipsum is simply dummy text printing and typesetting industry. It
           is a long established fact that.
         </p>
-        <button id="enroll-test-series" class="dark-btn">
+        <button class="dark-btn">
           Enroll for Test Series
+          <i class="material-icons">keyboard_arrow_right</i>
         </button>
       </section>
       <section id="features">
