--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
           <i class="material-icons">keyboard_arrow_right</i>
         </button>
       </section>
-      <section id="features">
+      <!-- <section id="features">
         <h3>Our Features</h3>
         <div class="feature">
           <i></i>
@@ -224,58 +224,74 @@
           <h4>Expert Faculty</h4>
           <p>Learn from the accomplished teachers with an in-depth</p>
         </div>
-      </section>
+      </section> -->
       <section id="individual-courses">
-        <h3>Individual Courses</h3>
+        <h2>Individual Courses</h2>
         <p>Explore 150+ Online Courses</p>
         <div id="courses-container">
-          <div id="course">
-            <img src="" alt="" />
+          <div class="course">
+            <img src="./assets/PNG X1/Rectangle 29.png" alt="" />
             <p class="price">&#8377;1500</p>
             <h4>C Programming and Data Structure</h4>
-            <a href="" class="enroll-course">Enroll Now</a>
+            <a href="" class="enroll-course"
+              >Enroll Now <i class="material-icons">trending_flat</i></a
+            >
           </div>
-          <div id="course">
-            <img src="" alt="" />
+          <div class="course">
+            <img src="./assets/PNG X1/Rectangle 29.png" alt="" />
             <p class="price">&#8377;1500</p>
             <h4>C Programming and Data Structure</h4>
-            <a href="" class="enroll-course">Enroll Now</a>
+            <a href="" class="enroll-course"
+              >Enroll Now <i class="material-icons">trending_flat</i></a
+            >
           </div>
-          <div id="course">
-            <img src="" alt="" />
+          <div class="course">
+            <img src="./assets/PNG X1/Rectangle 29.png" alt="" />
             <p class="price">&#8377;1500</p>
             <h4>C Programming and Data Structure</h4>
-            <a href="" class="enroll-course">Enroll Now</a>
+            <a href="" class="enroll-course"
+              >Enroll Now <i class="material-icons">trending_flat</i></a
+            >
           </div>
-          <div id="course">
-            <img src="" alt="" />
+          <div class="course">
+            <img src="./assets/PNG X1/Rectangle 29.png" alt="" />
             <p class="price">&#8377;1500</p>
             <h4>C Programming and Data Structure</h4>
-            <a href="" class="enroll-course">Enroll Now</a>
+            <a href="" class="enroll-course"
+              >Enroll Now <i class="material-icons">trending_flat</i></a
+            >
           </div>
-          <div id="course">
-            <img src="" alt="" />
+          <div class="course">
+            <img src="./assets/PNG X1/Rectangle 29.png" alt="" />
             <p class="price">&#8377;1500</p>
             <h4>C Programming and Data Structure</h4>
-            <a href="" class="enroll-course">Enroll Now</a>
+            <a href="" class="enroll-course"
+              >Enroll Now <i class="material-icons">trending_flat</i></a
+            >
           </div>
-          <div id="course">
-            <img src="" alt="" />
+          <div class="course">
+            <img src="./assets/PNG X1/Rectangle 29.png" alt="" />
             <p class="price">&#8377;1500</p>
             <h4>C Programming and Data Structure</h4>
-            <a href="" class="enroll-course">Enroll Now</a>
+            <a href="" class="enroll-course"
+              >Enroll Now <i class="material-icons">trending_flat</i></a
+            >
           </div>
-          <div id="course">
-            <img src="" alt="" />
+          <div class="course">
+            <img src="./assets/PNG X1/Rectangle 29.png" alt="" />
             <p class="price">&#8377;1500</p>
             <h4>C Programming and Data Structure</h4>
-            <a href="" class="enroll-course">Enroll Now</a>
+            <a href="" class="enroll-course"
+              >Enroll Now <i class="material-icons">trending_flat</i></a
+            >
           </div>
-          <div id="course">
-            <img src="" alt="" />
+          <div class="course">
+            <img src="./assets/PNG X1/Rectangle 29.png" alt="" />
             <p class="price">&#8377;1500</p>
             <h4>C Programming and Data Structure</h4>
-            <a href="" class="enroll-course">Enroll Now</a>
+            <a href="" class="enroll-course"
+              >Enroll Now <i class="material-icons">trending_flat</i></a
+            >
           </div>
         </div>
       </section>
