tried adding scroll effectto individualcourses

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
+    <script src="./scripts/carousel.js"></script>
     <title>Go Classes</title>
   </head>
   <body>
