added the styling for our team section

--- a/index.html
+++ b/index.html
@@ -297,21 +297,21 @@
         </div>
       </section>
       <section id="team">
-        <h3>Our Team</h3>
+        <h2>Our Team</h2>
         <p>
           Lorem Ipsum is simply dummy text printing and typesetting industry. It
           is a long established fact that.
         </p>
         <div class="team-container">
           <div class="member">
-            <img src="" alt="" />
-            <h4>Sachin Mittal</h4>
+            <img src="./assets/PNG X1/Rectangle 40-1.png" alt="" />
+            <p class="name">Sachin Mittal</p>
             <p>Faculty</p>
             <p>PhD Scholar, IIT Roorkee</p>
           </div>
           <div class="member">
-            <img src="" alt="" />
-            <h4>Deepak Poonia</h4>
+            <img src="./assets/PNG X1/Rectangle 40-1.png" alt="" />
+            <p class="name">Deepak Poonia</p>
             <p>Faculty</p>
             <p>PhD Scholar, IIT Roorkee</p>
           </div>
