FAQs design complete

--- a/index.html
+++ b/index.html
@@ -320,6 +320,7 @@
       <section id="FAQs">
         <h2>Frequently Asked Questions</h2>
         <div class="question-container">
+          <i class="material-icons" id="menu-open">add</i>
           <div class="question">
             <p>
               Q1. Will this course also help me in cracking other competitive
@@ -335,23 +336,7 @@
           </div>
         </div>
         <div class="question-container">
-          <div class="question">
-            <i></i>
-            <p>
-              Q1. Will this course also help me in cracking other competitive
-              exams of Computer Science?
-            </p>
-          </div>
-          <div class="answer">
-            <i></i>
-            <p>
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry. It is a long established fact that a reade distracted by
-              the readable content of a page when looking at its layout.
-            </p>
-          </div>
-        </div>
-        <div class="question-container">
+          <i class="material-icons" id="menu-open">add</i>
           <div class="question">
             <i></i>
             <p>
@@ -369,6 +354,25 @@
           </div>
         </div>
         <div class="question-container">
+          <i class="material-icons" id="menu-open">add</i>
+          <div class="question">
+            <i></i>
+            <p>
+              Q1. Will this course also help me in cracking other competitive
+              exams of Computer Science?
+            </p>
+          </div>
+          <div class="answer">
+            <i></i>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. It is a long established fact that a reade distracted by
+              the readable content of a page when looking at its layout.
+            </p>
+          </div>
+        </div>
+        <div class="question-container">
+          <i class="material-icons" id="menu-open">add</i>
           <div class="question">
             <i></i>
             <p>
