starting to design feedback portion

--- a/index.html
+++ b/index.html
@@ -389,7 +389,10 @@
             </p>
           </div>
         </div>
-        <button class="dark-btn">Contact us for more query</button>
+        <button id="contact-us-btn" class="dark-btn">
+          Contact us for more query
+          <i class="material-icons">keyboard_arrow_right</i>
+        </button>
       </section>
       <section id="testimonials">
         <h3>Our students love what we do</h3>
