added carousel to my team section

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
           Lorem Ipsum is simply dummy text printing and typesetting industry. It
           is a long established fact that.
         </p>
-        <div class="team-container">
+        <div class="team-container owl-carousel owl-theme">
           <div class="member">
             <img src="./assets/PNG X1/Rectangle 40-1.png" alt="" />
             <p class="name">Sachin Mittal</p>
