--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </nav>
     <main class="container">
       <header id="hero">
-        <div class="main-section">
+        <div class="main-section fadeIn">
           <div class="notify"><span>New Batch Start</span></div>
           <div class="main-heading"><h1>GATE CS 2023</h1></div>
           <div class="main-heading"><h1>Complete Course</h1></div>
