--- a/index.html
+++ b/index.html
@@ -1105,7 +1105,42 @@
           Enroll Now <i class="material-icons">keyboard_arrow_right</i>
         </button>
       </section>
-      <footer></footer>
+      <footer>
+        <div class="subscribe">
+          <img src="./logo/PNGLogo.png" alt="" class="logo" />
+          <h3>Our insight to your inbox</h3>
+          <div class="email-input">
+            <input type="email" placeholder="Your Email Address" class="dark-btn"></input>
+            <i class="material-icons">keyboard_arrow_right</i>
+          </div>
+        </div>
+        <div id="useful-links" class="footer-links">
+          <h3>Useful Links</h3>
+          <div class="links">
+            <a href="#">FAQs</a>
+            <a href="#">About Us</a>
+            <a href="#">Contact Us</a>
+          </div>
+        </div>
+
+        <div id="policy-links" class="footer-links">
+          <h3>Policy</h3>
+          <div class="links">
+            <a href="#">Terms of Use</a>
+            <a href="#">Privacy Policy</a>
+            <a href="#">Refund Policy</a>
+          </div>
+        </div>
+
+        <div id="contact-links" class="footer-links">
+          <h3>Contact Us</h3>
+          <div class="links">
+            <a href="#">+91-6302536274</a>
+            <a href="#">contact@goclasses.in</a>
+          </div>
+        </div>
+
+      </footer>
     </main>
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
