changes images of students

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
         <div class="testimonials-section">
           <div class="testimonial">
-            <img src="./assets/PNG X1/Group 26.png" alt="" />
+            <img src="./assets/PNG X1/himali_10_big.png" alt="" />
             <div class="youtube-link">
               <img src="./assets/PNG X1/Star 5.png" alt="" />
               <div class="rank">
@@ -67,35 +67,37 @@
             </div>
           </div>
           <div class="testimonial">
-            <img src="./assets/PNG X1/Group 27.png" alt="" />
+            <img src="./assets/PNG X1/sridhar_25_big.png" alt="" />
             <div class="youtube-link">
               <img src="./assets/PNG X1/Star 5.png" alt="" />
               <div class="rank">
-                <p>AIR 10</p>
+                <p>AIR 25</p>
                 <img src="./assets/PNG X1/youtube 5.png" alt="" data-youtubesrc="https://www.youtube.com/embed/86VUqcXo8Sc" />
               </div>
             </div>
           </div>
           <div class="testimonial">
-            <img src="./assets/PNG X1/Group 28.png" alt="" />
+            <img src="./assets/PNG X1/dhiraj_34_big.png" alt="" />
+            <div class="youtube-link">
+              <img src="./assets/PNG X1/Star 5.png" alt="" />
+              <div class="rank">
+                <p>AIR 34</p>
+                <img src="./assets/PNG X1/youtube 5.png" alt="" data-youtubesrc="https://www.youtube.com/embed/86VUqcXo8Sc" />
+              </div>
+            </div>
+          </div>
+          
+          <div class="testimonial">
+            <img src="./assets/PNG X1/piyush_37_big.png" alt="" />
             <div class="youtube-link">
               <img src="./assets/PNG X1/Star 5.png" alt=""  />
               <div class="rank">
-                <p>AIR 10</p>
+                <p>AIR 37</p>
                 <img src="./assets/PNG X1/youtube 5.png" alt="" data-youtubesrc="https://www.youtube.com/embed/86VUqcXo8Sc" />
               </div>
             </div>
           </div>
-          <div class="testimonial">
-            <img src="./assets/PNG X1/Group 29.png" alt="" />
-            <div class="youtube-link">
-              <img src="./assets/PNG X1/Star 5.png" alt="" />
-              <div class="rank">
-                <p>AIR 10</p>
-                <img src="./assets/PNG X1/youtube 5.png" alt="" data-youtubesrc="https://www.youtube.com/embed/86VUqcXo8Sc" />
-              </div>
-            </div>
-          </div>
+          
         </div>
       </header>
       <div id="container-for-free-course-and-imp-info">
