added images of students

--- a/index.html
+++ b/index.html
@@ -939,13 +939,13 @@
         </p>
         <div class="team-container team-owl-carousel">
           <div class="member">
-            <img src="./assets/PNG X1/Rectangle 40-1.png" alt="" />
+            <img src="./assets/PNG X1/sachin_big.png" alt="" />
             <p class="name">Sachin Mittal</p>
             <p>Faculty</p>
             <p>PhD Scholar, IIT Roorkee</p>
           </div>
           <div class="member">
-            <img src="./assets/PNG X1/Rectangle 40-1.png" alt="" />
+            <img src="./assets/PNG X1/deepak_big.png" alt="" />
             <p class="name">Deepak Poonia</p>
             <p>Faculty</p>
             <p>PhD Scholar, IIT Roorkee</p>
