--- a/index.html
+++ b/index.html
@@ -130,89 +130,17 @@
         </div>
       </header>
 
-      <section id="team">
-        <h2>Our Team</h2>
-        <p>
-          Lorem Ipsum is simply dummy text printing and typesetting industry. It
-          is a long established fact that.
-        </p>
-        <div class="slide-container swiper">
-          <div class="slide-content">
-            <div class="card-wrapper swiper-wrapper">
-              <div class="card swiper-slide">
-                <div class="image-content">
-                  <span class="overlay"></span>
 
-                  <div class="card-image">
-                    <img src="/assets/PNG X1/deepak_big.png" alt="" class="card-img">
-                  </div>
-                </div>
-
-                <div class="card-content">
-                  <h2 class="name">Deepak Poonia</h2>
-                  <p class="description">The lorem text the section that contains header with having open functionality.
-                    Lorem dolor sit amet consectetur adipisicing elit.</p>
-
-                  <button class="button">Contact me</button>
-                </div>
-              </div>
-              <div class="card swiper-slide">
-                <div class="image-content">
-                  <span class="overlay"></span>
-
-                  <div class="card-image">
-                    <img src="/assets/PNG X1/sachin_big.png" alt="" class="card-img">
-                  </div>
-                </div>
-
-                <div class="card-content">
-                  <h2 class="name">Sachin Mittal</h2>
-                  <p class="description">The lorem text the section that contains header with having open functionality.
-                    Lorem dolor sit amet consectetur adipisicing elit.</p>
-
-                  <button class="button">Contact me</button>
-                </div>
-              </div>
-              <div class="card swiper-slide">
-                <div class="image-content">
-                  <span class="overlay"></span>
-
-                  <div class="card-image">
-                    <img src="/assets/images/profile3.jpg" alt="" class="card-img">
-                  </div>
-                </div>
-
-                <div class="card-content">
-                  <h2 class="name">David Dell</h2>
-                  <p class="description">The lorem text the section that contains header with having open functionality.
-                    Lorem dolor sit amet consectetur adipisicing elit.</p>
-
-                  <button class="button">Contact me</button>
-                </div>
-              </div>
-
-
-
-
-
-            </div>
-          </div>
-
-          <div class="swiper-button-next swiper-navBtn"></div>
-          <div class="swiper-button-prev swiper-navBtn"></div>
-          <div class="swiper-pagination"></div>
-        </div>
-      </section>
 
       <h2 class="explore-course">Explore Our Free Courses</h2>
 
-      <div class="wrapper">
+      <div class="wrapper margin-bottom">
         <div class="carousel owl-carousel">
-          <div class="card card-1">A</div>
-          <div class="card card-2">B</div>
-          <div class="card card-3">C</div>
-          <div class="card card-4">D</div>
-          <div class="card card-5">E</div>
+          <div class="card card-1 line-height">A</div>
+          <div class="card card-2 line-height">B</div>
+          <div class="card card-3 line-height">C</div>
+          <div class="card card-4 line-height">D</div>
+          <div class="card card-5 line-height">E</div>
 
         </div>
       </div>
@@ -790,15 +718,160 @@
         </div>
       </section>
 
+      <section id="team">
+        <h2>Our Team</h2>
+        <p>
+          Lorem Ipsum is simply dummy text printing and typesetting industry. It
+          is a long established fact that.
+        </p>
+        <div>
+          <div>
+            <div class="card-wrapper flex-display">
+              <div class="card">
+                <div class="image-content">
+                  <span class="overlay"></span>
+
+                  <div class="card-image">
+                    <img src="/assets/PNG X1/deepak_big.png" alt="" class="card-img">
+                  </div>
+                </div>
+
+                <div class="card-content">
+                  <h2 class="name">Deepak Poonia</h2>
+                  <p class="description">The lorem text the section that contains header with having open functionality.
+                    Lorem dolor sit amet consectetur adipisicing elit.</p>
+
+                  <button class="button">Contact me</button>
+                </div>
+              </div>
+              <div class="card">
+                <div class="image-content">
+                  <span class="overlay"></span>
+
+                  <div class="card-image">
+                    <img src="/assets/PNG X1/sachin_big.png" alt="" class="card-img">
+                  </div>
+                </div>
+
+                <div class="card-content">
+                  <h2 class="name">Sachin Mittal</h2>
+                  <p class="description">The lorem text the section that contains header with having open functionality.
+                    Lorem dolor sit amet consectetur adipisicing elit.</p>
+
+                  <button class="button">Contact me</button>
+                </div>
+              </div>
+              <div class="card">
+                <div class="image-content">
+                  <span class="overlay"></span>
+
+                  <div class="card-image">
+                    <img src="/assets/images/profile3.jpg" alt="" class="card-img">
+                  </div>
+                </div>
+
+                <div class="card-content">
+                  <h2 class="name">David Dell</h2>
+                  <p class="description">The lorem text the section that contains header with having open functionality.
+                    Lorem dolor sit amet consectetur adipisicing elit.</p>
+
+                  <button class="button">Contact me</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+        </div>
+      </section>
+
+      <section id="FAQs">
+        <h2>Frequently Asked Questions</h2>
+        <div class="question-container">
+          <i class="material-icons">add</i>
+          <div class="question">
+            <p>
+              Q1. Will this course also help me in cracking other competitive
+              exams of Computer Science?
+            </p>
+          </div>
+          <div class="answer">
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. It is a long established fact that a reade distracted by
+              the readable content of a page when looking at its layout.
+            </p>
+          </div>
+        </div>
+        <div class="question-container">
+          <i class="material-icons">add</i>
+          <div class="question">
+            <i></i>
+            <p>
+              Q1. Will this course also help me in cracking other competitive
+              exams of Computer Science?
+            </p>
+          </div>
+          <div class="answer">
+            <i></i>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. It is a long established fact that a reade distracted by
+              the readable content of a page when looking at its layout.
+            </p>
+          </div>
+        </div>
+        <div class="question-container">
+          <i class="material-icons">add</i>
+          <div class="question">
+            <i></i>
+            <p>
+              Q1. Will this course also help me in cracking other competitive
+              exams of Computer Science?
+            </p>
+          </div>
+          <div class="answer">
+            <i></i>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. It is a long established fact that a reade distracted by
+              the readable content of a page when looking at its layout.
+            </p>
+          </div>
+        </div>
+        <div class="question-container">
+          <i class="material-icons">add</i>
+          <div class="question">
+            <i></i>
+            <p>
+              Q1. Will this course also help me in cracking other competitive
+              exams of Computer Science?
+            </p>
+          </div>
+          <div class="answer">
+            <i></i>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. It is a long established fact that a reade distracted by
+              the readable content of a page when looking at its layout.
+            </p>
+          </div>
+        </div>
+        <button id="contact-us-btn" class="dark-btn">
+          Contact us for more query
+          <i class="material-icons">keyboard_arrow_right</i>
+        </button>
+      </section>
+
       <section id="testimonials">
         <h2>Our <span class="orange">students</span> love what we do</h2>
         <p>
           Lorem Ipsum is simply dummy text printing and typesetting industry. It
           is a long established fact that.
         </p>
-        <div class="slide-container swiper">
-          <div class="slide-content">
-            <div class="card-wrapper swiper-wrapper">
+        <div>
+          <div class="wrapper">
+            <div class="carousel owl-carousel">
               <div class="card swiper-slide">
                 <div class="image-content">
                   <span class="overlay"></span>
@@ -981,91 +1054,12 @@
             </div>
           </div>
 
-          <div class="swiper-button-next swiper-navBtn"></div>
-          <div class="swiper-button-prev swiper-navBtn"></div>
-          <div class="swiper-pagination"></div>
         </div>
 
 
       </section>
 
-      <section id="FAQs">
-        <h2>Frequently Asked Questions</h2>
-        <div class="question-container">
-          <i class="material-icons">add</i>
-          <div class="question">
-            <p>
-              Q1. Will this course also help me in cracking other competitive
-              exams of Computer Science?
-            </p>
-          </div>
-          <div class="answer">
-            <p>
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry. It is a long established fact that a reade distracted by
-              the readable content of a page when looking at its layout.
-            </p>
-          </div>
-        </div>
-        <div class="question-container">
-          <i class="material-icons">add</i>
-          <div class="question">
-            <i></i>
-            <p>
-              Q1. Will this course also help me in cracking other competitive
-              exams of Computer Science?
-            </p>
-          </div>
-          <div class="answer">
-            <i></i>
-            <p>
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry. It is a long established fact that a reade distracted by
-              the readable content of a page when looking at its layout.
-            </p>
-          </div>
-        </div>
-        <div class="question-container">
-          <i class="material-icons">add</i>
-          <div class="question">
-            <i></i>
-            <p>
-              Q1. Will this course also help me in cracking other competitive
-              exams of Computer Science?
-            </p>
-          </div>
-          <div class="answer">
-            <i></i>
-            <p>
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry. It is a long established fact that a reade distracted by
-              the readable content of a page when looking at its layout.
-            </p>
-          </div>
-        </div>
-        <div class="question-container">
-          <i class="material-icons">add</i>
-          <div class="question">
-            <i></i>
-            <p>
-              Q1. Will this course also help me in cracking other competitive
-              exams of Computer Science?
-            </p>
-          </div>
-          <div class="answer">
-            <i></i>
-            <p>
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry. It is a long established fact that a reade distracted by
-              the readable content of a page when looking at its layout.
-            </p>
-          </div>
-        </div>
-        <button id="contact-us-btn" class="dark-btn">
-          Contact us for more query
-          <i class="material-icons">keyboard_arrow_right</i>
-        </button>
-      </section>
+
 
 
     </main>
@@ -1080,6 +1074,7 @@
           <i class="footerPills fab fa-github"></i>
           <i class="fa-brands fa-youtube"></i>
           <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-google-play"></i>
         </div>
         <!-- <div class="email-input">
           <input type="email" placeholder="Your Email Address" class="dark-btn"></input>
