--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
   <div class="popup">
     <button id="close">&times;</button>
     <h1>FREE COURSE ANNOUNCEMENT</h1>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
-    <a href="#">Let's go</a>
+    <p> Join our complete free courses of C programming and Discrete mathematics </p>
+    <a href="https://www.goclasses.in/s/store/courses/description/2023-Discrete-Mathematics">Let's go</a>
   </div>
   <div class="nothing" id="blur">
     <nav class="menu">
@@ -131,7 +131,40 @@
 
 
 
+      <h2 class="explore-course">Explore Our Free Courses</h2>
 
+      <div class="wrapper margin-bottom">
+        <div class="card-wrapper flex-display">
+          <div class="course">
+            <img
+              src="https://dz8fbjd9gwp2s.cloudfront.net/courses/6219f6bf0cf2f5eac99e265b/6219f6bf0cf2f5eac99e265b_scaled_cover.jpg?v=2"
+              alt="" />
+            <p class="price">FREE</p>
+            <h4>Discrete Mathematics</h4>
+            <a target="_blank" href="https://www.goclasses.in/s/store/courses/description/2023-Discrete-Mathematics"
+              class="enroll-course">Enroll Now </a>
+          </div>
+          <div class="course">
+            <img
+              src="https://dz8fbjd9gwp2s.cloudfront.net/courses/621a02a60cf242311be950a4/621a02a60cf242311be950a4_scaled_cover.jpg?v=2"
+              alt="" />
+            <p class="price">FREE</p>
+            <h4>C Programming and Data Structure</h4>
+            <a href="https://www.goclasses.in/s/store/courses/description/2023-C-Programming" target="_blank"
+              class="enroll-course">Enroll Now </a>
+          </div>
+          <div class="course">
+            <img
+              src="https://dz8fbjd9gwp2s.cloudfront.net/courses/6219f6bf0cf2f5eac99e265b/6219f6bf0cf2f5eac99e265b_scaled_cover.jpg?v=2"
+              alt="" />
+            <p class="price">FREE</p>
+            <h4>Discrete Mathematics</h4>
+            <a target="_blank" href="https://www.goclasses.in/s/store/courses/description/2023-Discrete-Mathematics"
+              class="enroll-course">Enroll Now </a>
+          </div>
+
+        </div>
+      </div>
 
 
 
@@ -609,40 +642,7 @@
         </div>
       </section>
 
-      <h2 class="explore-course">Explore Our Free Courses</h2>
 
-      <div class="wrapper margin-bottom">
-        <div class="card-wrapper flex-display">
-          <div class="course">
-            <img
-              src="https://dz8fbjd9gwp2s.cloudfront.net/courses/6219f6bf0cf2f5eac99e265b/6219f6bf0cf2f5eac99e265b_scaled_cover.jpg?v=2"
-              alt="" />
-            <p class="price">FREE</p>
-            <h4>Discrete Mathematics</h4>
-            <a target="_blank" href="https://www.goclasses.in/s/store/courses/description/2023-Discrete-Mathematics"
-              class="enroll-course">Enroll Now </a>
-          </div>
-          <div class="course">
-            <img
-              src="https://dz8fbjd9gwp2s.cloudfront.net/courses/621a02a60cf242311be950a4/621a02a60cf242311be950a4_scaled_cover.jpg?v=2"
-              alt="" />
-            <p class="price">FREE</p>
-            <h4>C Programming and Data Structure</h4>
-            <a href="https://www.goclasses.in/s/store/courses/description/2023-C-Programming" target="_blank"
-              class="enroll-course">Enroll Now </a>
-          </div>
-          <div class="course">
-            <img
-              src="https://dz8fbjd9gwp2s.cloudfront.net/courses/6219f6bf0cf2f5eac99e265b/6219f6bf0cf2f5eac99e265b_scaled_cover.jpg?v=2"
-              alt="" />
-            <p class="price">FREE</p>
-            <h4>Discrete Mathematics</h4>
-            <a target="_blank" href="https://www.goclasses.in/s/store/courses/description/2023-Discrete-Mathematics"
-              class="enroll-course">Enroll Now </a>
-          </div>
-
-        </div>
-      </div>
 
 
       <section class="section-special feature">
@@ -945,7 +945,8 @@
                 </div>
 
                 <div class="card-content">
-                  <h2 class="name">Deepak Poonia (Founder)</h2>
+                  <p style="font-weight: bold; margin-top:1.6rem; font-size:20px">Deepak Poonia</p>
+                  <h4> FOUNDER </h4>
                   <p class="description">Founder and Instructor
                     MTech IISc Bangalore
                     Ex ACE Engineering Academy
@@ -966,7 +967,8 @@
                 </div>
 
                 <div class="card-content">
-                  <h2 class="name">Sachin Mittal (Faculty)</h2>
+                  <p style="font-weight: bold; margin-top:1.6rem; font-size:20px">Sachin Mittal</p>
+                  <h4> FACULTY </h4>
                   <p class="description">Faculty
                     MTech IISc Bangalore
                     Ex Amazon Scientist
@@ -988,7 +990,8 @@
                 </div>
 
                 <div class="card-content">
-                  <h2 class="name">Dr. Arjun Suresh (Mentor)</h2>
+                  <p style="font-weight: bold; margin-top:1.6rem; font-size:20px">Dr. Arjun Suresh</p>
+                  <h4> MENTOR </h4>
 
                   <p class="description">Mentor
                     Founder GATE Overflow
@@ -1176,10 +1179,7 @@
 
       <section id="testimonials">
         <h2>Our <span class="orange">students</span> love what we do</h2>
-        <p>
-          Lorem Ipsum is simply dummy text printing and typesetting industry. It
-          is a long established fact that.
-        </p>
+
         <div>
           <div class="wrapper">
             <div class="carousel owl-carousel">
@@ -1232,7 +1232,7 @@
 
                 <div class="card-content">
                   <h2 class="name">Likith P</h2>
-                  <p class="description">My advice would be Join GO classes since it’s the perfect substitute for
+                  <p class="description">My advice would be Join GO classes since it's the perfect substitute for
                     standard textbooks
                   </p>
 
@@ -1378,7 +1378,7 @@
         <div class="social-icons">
           <i class="footerPills fab fa-twitter"></i>
           <i class="footerPills fab fa-linkedin"></i>
-          <i class="footerPills fab fa-github"></i>
+          <i class="fa-brands fa-telegram"></i>
           <i class="fa-brands fa-youtube"></i>
           <i class="fa-brands fa-instagram"></i>
           <i class="fa-brands fa-google-play"></i>
