--- a/index.html
+++ b/index.html
@@ -154,13 +154,11 @@
               class="enroll-course">Enroll Now </a>
           </div>
           <div class="course">
-            <img
-              src="https://dz8fbjd9gwp2s.cloudfront.net/courses/6219f6bf0cf2f5eac99e265b/6219f6bf0cf2f5eac99e265b_scaled_cover.jpg?v=2"
-              alt="" />
+            <img src="./assets/testimonails/YouTube.png" alt="" />
             <p class="price">FREE</p>
-            <h4>Discrete Mathematics</h4>
-            <a target="_blank" href="https://www.goclasses.in/s/store/courses/description/2023-Discrete-Mathematics"
-              class="enroll-course">Enroll Now </a>
+            <h4>Go Class YouTube Channel</h4>
+            <a target="_blank" href="https://www.youtube.com/@GOClassesforGATECS" class="enroll-course">Explore free
+              courses</a>
           </div>
 
         </div>
@@ -651,7 +649,7 @@
           <hr />
           <div class="tiles">
             <div class="card-special">
-              <div class="card-icon"><i class="fa-solid fa-users special-icon"></i></div>
+              <div class="card-icon"><img class="small-special-img" src="./assets/testimonails/teamwork.png" /></div>
               <div class="header-s course-title">Expert Faculty
                 <!-- -->
               </div>
@@ -662,7 +660,7 @@
               </div>
             </div>
             <div class="card-special">
-              <div class="card-icon"><i class="fa-solid fa-wand-magic-sparkles special-icon"></i></div>
+              <div class="card-icon"><img class="small-special-img" src="./assets/testimonails/magic-wand.png" /></div>
               <div class="header-s course-title">Cutting Edge Curriculum
                 <!-- -->
               </div>
@@ -673,7 +671,7 @@
               </div>
             </div>
             <div class="card-special">
-              <div class="card-icon"><i class="fa-regular fa-bell special-icon"></i></div>
+              <div class="card-icon"><img class="small-special-img" src="./assets/testimonails/sensor.png" /></div>
               <div class="header-s course-title">Live Classes
                 <!-- -->
               </div>
@@ -685,7 +683,7 @@
             </div>
 
             <div class="card-special">
-              <div class="card-icon"><i class="fa-regular fa-comments special-icon"></i></div>
+              <div class="card-icon"><img class="small-special-img" src="./assets/testimonails/message.png" /></div>
               <div class="header-s course-title">Student Discussion Forum
                 <!-- -->
               </div>
@@ -695,7 +693,7 @@
               </div>
             </div>
             <div class="card-special">
-              <div class="card-icon"><i class="fa-regular fa-note-sticky special-icon"></i> </div>
+              <div class="card-icon"><img class="small-special-img" src="./assets/testimonails/book.png" /> </div>
               <div class="header-s course-title">Quiz and Assignments
                 <!-- -->
               </div>
@@ -705,7 +703,7 @@
               </div>
             </div>
             <div class="card-special">
-              <div class="card-icon"><img src="https://neog.camp/icons/youtube.svg" /></div>
+              <div class="card-icon"><img class="small-special-img" src="./assets/testimonails/youtube (1).png" /></div>
               <div class="header-s course-title">Video Lectures
                 <!-- -->
               </div>
@@ -715,7 +713,7 @@
               </div>
             </div>
             <div class="card-special">
-              <div class="card-icon"><i class="fa-regular fa-note-sticky special-icon"></i> </div>
+              <div class="card-icon"><img class="small-special-img" src="./assets/testimonails/homework.png" /> </div>
               <div class="header-s course-title">CLASS NOTES
                 <!-- -->
               </div>
@@ -725,7 +723,8 @@
               </div>
             </div>
             <div class="card-special">
-              <div class="card-icon"><i class="fa-regular fa-bell special-icon"></i></div>
+              <div class="card-icon"><img class="small-special-img" src="./assets/testimonails/notification.png" />
+              </div>
               <div class="header-s course-title">Alert and notification
                 <!-- -->
               </div>
@@ -735,7 +734,7 @@
               </div>
             </div>
             <div class="card-special">
-              <div class="card-icon"><i class="fa-regular fa-thumbs-up special-icon"></i></div>
+              <div class="card-icon"><img class="small-special-img" src="./assets/testimonails/badge.png" /></div>
               <div class="header-s course-title">Trusted Content
                 <!-- -->
               </div>
@@ -745,7 +744,8 @@
               </div>
             </div>
             <div class="card-special">
-              <div class="card-icon"><i class="fa-regular fa-credit-card special-icon"></i></div>
+              <div class="card-icon"><img class="small-special-img" src="./assets/testimonails/credit-card (1).png" />
+              </div>
               <div class="header-s course-title">Affordable Fee Structure
                 <!-- -->
               </div>
@@ -755,7 +755,7 @@
               </div>
             </div>
             <div class="card-special">
-              <div class="card-icon"><i class="fa-regular fa-star special-icon "></i></div>
+              <div class="card-icon"><img class="small-special-img" src="./assets/testimonails/favourites.png" /></div>
               <div class="header-s course-title">FREE Access to Interview prep course
                 <!-- -->
               </div>
@@ -766,7 +766,7 @@
               </div>
             </div>
             <div class="card-special">
-              <div class="card-icon"><i class="fa-solid fa-signal special-icon"></i></div>
+              <div class="card-icon"><img class="small-special-img" src="./assets/testimonails/book (1).png" /></div>
               <div class="header-s course-title">Learn Anytime Anywhere
                 <!-- -->
               </div>
@@ -837,25 +837,16 @@
             <img
               src="https://dz8fbjd9gwp2s.cloudfront.net/courses/621a02a60cf242311be950a4/621a02a60cf242311be950a4_scaled_cover.jpg?v=2"
               alt="" />
-            <p class="price">C Programming and Data Structure</p>
+            <p class="price">C Programming</p>
 
             <a href="https://www.goclasses.in/s/store/courses/description/2023-C-Programming" target="_blank"
               class="enroll-course">Enroll Now <i class="material-icons">trending_flat</i></a>
           </div>
           <div class="course">
-            <img
-              src="https://dz8fbjd9gwp2s.cloudfront.net/courses/60fdd1ac0cf2ab85f9c65136/60fdd1ac0cf2ab85f9c65136_scaled_cover.jpg?v=1"
-              alt="" />
-            <p class="price">Operating Systems</p>
-            <a href="https://www.goclasses.in/s/store/courses/description/Operating-Systems" target="_blank"
-              class="enroll-course">Enroll Now <i class="material-icons">trending_flat</i></a>
-          </div>
-          <div class="course">
-            <img
-              src="https://dz8fbjd9gwp2s.cloudfront.net/courses/60fdd5880cf24b442d1c8f1e/60fdd5880cf24b442d1c8f1e_scaled_cover.jpg?v=1"
-              alt="" />
-            <p class="price">Computer Architecture</p>
-            <a href="https://www.goclasses.in/s/store/courses/description/Computer-Architecture" target="_blank"
+            <img src="./assets/testimonails/Data Structure.png" alt="" />
+            <p class="price">Data Structures</p>
+
+            <a href="https://www.goclasses.in/s/store/courses/description/2023-C-Programming" target="_blank"
               class="enroll-course">Enroll Now <i class="material-icons">trending_flat</i></a>
           </div>
           <div class="course">
@@ -868,34 +859,18 @@
           </div>
           <div class="course">
             <img
+              src="https://dz8fbjd9gwp2s.cloudfront.net/courses/62ebac820cf2fa01164bb7a9/62ebac820cf2fa01164bb7a9_scaled_cover.jpg?v=1"
+              alt="" />
+            <p class="price">Theory of Computation</p>
+            <a href="https://www.goclasses.in/s/store/courses/description/Theory-of-Computation-2023" target="_blank"
+              class="enroll-course">Enroll Now <i class="material-icons">trending_flat</i></a>
+          </div>
+          <div class="course">
+            <img
               src="https://dz8fbjd9gwp2s.cloudfront.net/courses/60fdd5880cf24b442d1c8f1e/60fdd5880cf24b442d1c8f1e_scaled_cover.jpg?v=1"
               alt="" />
             <p class="price">Compiler Design</p>
             <a href="https://www.goclasses.in/s/store/courses/description/Compiler-Design" target="_blank"
-              class="enroll-course">Enroll Now <i class="material-icons">trending_flat</i></a>
-          </div>
-          <div class="course">
-            <img
-              src="https://dz8fbjd9gwp2s.cloudfront.net/courses/62aa64860cf2d98f15f6229b/62aa64860cf2d98f15f6229b_scaled_cover.jpg?v=1"
-              alt="" />
-            <p class="price">Digital Logic</p>
-            <a href="https://www.goclasses.in/s/store/courses/description/Digital-Logic-2023" target="_blank"
-              class="enroll-course">Enroll Now <i class="material-icons">trending_flat</i></a>
-          </div>
-          <div class="course">
-            <img
-              src="https://dz8fbjd9gwp2s.cloudfront.net/courses/60fdd8530cf2c7989e1f109d/60fdd8530cf2c7989e1f109d_scaled_cover.jpg?v=1"
-              alt="" />
-            <p class="price">Aptitude</p>
-            <a href="https://www.goclasses.in/s/store/courses/description/Aptitude" target="_blank"
-              class="enroll-course">Enroll Now <i class="material-icons">trending_flat</i></a>
-          </div>
-          <div class="course">
-            <img
-              src="https://dz8fbjd9gwp2s.cloudfront.net/courses/60fdd8530cf2c7989e1f109d/60fdd8530cf2c7989e1f109d_scaled_cover.jpg?v=1"
-              alt="" />
-            <p class="price">Engineering Mathematics</p>
-            <a href="https://www.goclasses.in/s/store/courses/description/Engineering-Mathematics" target="_blank"
               class="enroll-course">Enroll Now <i class="material-icons">trending_flat</i></a>
           </div>
           <div class="course">
@@ -908,12 +883,38 @@
           </div>
           <div class="course">
             <img
-              src="https://dz8fbjd9gwp2s.cloudfront.net/courses/62ebac820cf2fa01164bb7a9/62ebac820cf2fa01164bb7a9_scaled_cover.jpg?v=1"
+              src="https://dz8fbjd9gwp2s.cloudfront.net/courses/60fdd8530cf2c7989e1f109d/60fdd8530cf2c7989e1f109d_scaled_cover.jpg?v=1"
               alt="" />
-            <p class="price">Theory of Computation</p>
-            <a href="https://www.goclasses.in/s/store/courses/description/Theory-of-Computation-2023" target="_blank"
+            <p class="price">Engineering Mathematics</p>
+            <a href="https://www.goclasses.in/s/store/courses/description/Engineering-Mathematics" target="_blank"
               class="enroll-course">Enroll Now <i class="material-icons">trending_flat</i></a>
           </div>
+          <div class="course">
+            <img
+              src="https://dz8fbjd9gwp2s.cloudfront.net/courses/62aa64860cf2d98f15f6229b/62aa64860cf2d98f15f6229b_scaled_cover.jpg?v=1"
+              alt="" />
+            <p class="price">Digital Logic</p>
+            <a href="https://www.goclasses.in/s/store/courses/description/Digital-Logic-2023" target="_blank"
+              class="enroll-course">Enroll Now <i class="material-icons">trending_flat</i></a>
+          </div>
+          <div class="course">
+            <img
+              src="https://dz8fbjd9gwp2s.cloudfront.net/courses/60fdd5880cf24b442d1c8f1e/60fdd5880cf24b442d1c8f1e_scaled_cover.jpg?v=1"
+              alt="" />
+            <p class="price">Computer Architecture</p>
+            <a href="https://www.goclasses.in/s/store/courses/description/Computer-Architecture" target="_blank"
+              class="enroll-course">Enroll Now <i class="material-icons">trending_flat</i></a>
+          </div>
+          <div class="course">
+            <img
+              src="https://dz8fbjd9gwp2s.cloudfront.net/courses/60fdd1ac0cf2ab85f9c65136/60fdd1ac0cf2ab85f9c65136_scaled_cover.jpg?v=1"
+              alt="" />
+            <p class="price">Operating Systems</p>
+            <a href="https://www.goclasses.in/s/store/courses/description/Operating-Systems" target="_blank"
+              class="enroll-course">Enroll Now <i class="material-icons">trending_flat</i></a>
+          </div>
+
+
           <div class="course">
             <img
               src="https://dz8fbjd9gwp2s.cloudfront.net/courses/62e770ae0cf29f3db8f01636/62e770ae0cf29f3db8f01636_scaled_cover.jpg?v=1"
@@ -922,6 +923,42 @@
             <a href="https://www.goclasses.in/s/store/courses/description/Computer-Networks-2023" target="_blank"
               class="enroll-course">Enroll Now <i class="material-icons">trending_flat</i></a>
           </div>
+
+          <div class="course">
+            <img
+              src="https://dz8fbjd9gwp2s.cloudfront.net/courses/60fdd8530cf2c7989e1f109d/60fdd8530cf2c7989e1f109d_scaled_cover.jpg?v=1"
+              alt="" />
+            <p class="price">Aptitude</p>
+            <a href="https://www.goclasses.in/s/store/courses/description/Aptitude" target="_blank"
+              class="enroll-course">Enroll Now <i class="material-icons">trending_flat</i></a>
+          </div>
+          <div class="course">
+            <img
+              src="https://dz8fbjd9gwp2s.cloudfront.net/courses/6219f6bf0cf2f5eac99e265b/6219f6bf0cf2f5eac99e265b_scaled_cover.jpg?v=2"
+              alt="" />
+            <p class="price">Discrete Mathematics</p>
+            <a target="_blank" href="https://www.goclasses.in/s/store/courses/description/2023-Discrete-Mathematics"
+              class="enroll-course">Enroll Now <i class="material-icons">trending_flat</i></a>
+          </div>
+          <div class="course">
+            <img
+              src="https://dz8fbjd9gwp2s.cloudfront.net/courses/621a02a60cf242311be950a4/621a02a60cf242311be950a4_scaled_cover.jpg?v=2"
+              alt="" />
+            <p class="price">C Programming</p>
+
+            <a href="https://www.goclasses.in/s/store/courses/description/2023-C-Programming" target="_blank"
+              class="enroll-course">Enroll Now <i class="material-icons">trending_flat</i></a>
+          </div>
+          <div class="course">
+            <img src="./assets/testimonails/Data Structure.png" alt="" />
+            <p class="price">Data Structures</p>
+
+            <a href="https://www.goclasses.in/s/store/courses/description/2023-C-Programming" target="_blank"
+              class="enroll-course">Enroll Now <i class="material-icons">trending_flat</i></a>
+          </div>
+
+
+
         </div>
       </section>
 
