--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           </div>
           <p style="margin-bottom:2rem; margin-left:0.4rem; margin-top: 2rem; font-size: 20px;"
             class="course-description">
-            GO CLASSES : known for Quality Learning.
+            GO to Root of Concept,Not Rote the Concept
           </p>
 
           <div class="buttons">
