--- a/index.html
+++ b/index.html
@@ -831,7 +831,7 @@
               alt="" />
             <p class="price">Discrete Mathematics</p>
             <a target="_blank" href="https://www.goclasses.in/s/store/courses/description/2023-Discrete-Mathematics"
-              class="enroll-course">Enroll Now <i class="material-icons">trending_flat</i></a>
+              class="enroll-course">Free <i class="material-icons">trending_flat</i></a>
           </div>
           <div class="course">
             <img
@@ -840,7 +840,7 @@
             <p class="price">C Programming</p>
 
             <a href="https://www.goclasses.in/s/store/courses/description/2023-C-Programming" target="_blank"
-              class="enroll-course">Enroll Now <i class="material-icons">trending_flat</i></a>
+              class="enroll-course">Free <i class="material-icons">trending_flat</i></a>
           </div>
           <div class="course">
             <img src="./assets/testimonails/Data Structure.png" alt="" />
@@ -938,7 +938,7 @@
               alt="" />
             <p class="price">Discrete Mathematics</p>
             <a target="_blank" href="https://www.goclasses.in/s/store/courses/description/2023-Discrete-Mathematics"
-              class="enroll-course">Enroll Now <i class="material-icons">trending_flat</i></a>
+              class="enroll-course">Free <i class="material-icons">trending_flat</i></a>
           </div>
           <div class="course">
             <img
@@ -947,7 +947,7 @@
             <p class="price">C Programming</p>
 
             <a href="https://www.goclasses.in/s/store/courses/description/2023-C-Programming" target="_blank"
-              class="enroll-course">Enroll Now <i class="material-icons">trending_flat</i></a>
+              class="enroll-course">Free <i class="material-icons">trending_flat</i></a>
           </div>
           <div class="course">
             <img src="./assets/testimonails/Data Structure.png" alt="" />
